--- a/Park.ly/Info.plist
+++ b/Park.ly/Info.plist
@@ -20,6 +20,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Need to use location for routes and to find where your car is parked. </string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Need to use location</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Uses location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Uses location to find car.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -41,6 +49,12 @@
 	</dict>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>location</string>
+		<string>processing</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
